@@ -23,6 +23,7 @@ Horst Gassner			bug reports and suggestions
 Tim Hochberg			bug reports
 Ben Hutchings			bug reports
 Jonathan Mark 			bug reports and suggestions
+Michele Moore			many suggestions
 Rich Salz			bug reports and suggestions
 Joe VanAndel			bug reports
 Matt Wilson			bug reports and fixes
