@@ -1,5 +1,6 @@
 
 Version 0.8	- xx August 2001
+  * Add -M/reimportself to warn when a module imports itself
   * Add -E/unusednames to provide a list of unused names to ignore
 	(default is: [ '_', 'empty', 'unused' ])
   * Major refactoring of warn.py -> utils, msgs, Warning, CodeChecks
